--- a/web-studio/css/style.css
+++ b/web-studio/css/style.css
@@ -2501,4 +2501,224 @@ a {
   .footer__title {
     font-size: 28px;
   }
+}
+
+.section-privacy {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: auto;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.section-privacy__content {
+  position: relative;
+  margin: 25px auto;
+  padding: 24px;
+  width: 780px;
+  max-width: 94%;
+  background-color: white;
+}
+.section-privacy__title {
+  margin-bottom: 20px;
+}
+@media (max-width: 575px) {
+  .section-privacy__title {
+    font-size: 18px;
+  }
+}
+.section-privacy__heading {
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 700;
+  color: #2D2D2D;
+}
+@media (max-width: 575px) {
+  .section-privacy__heading {
+    font-size: 18px;
+  }
+}
+.section-privacy__list {
+  margin-bottom: 20px;
+}
+.section-privacy__item {
+  margin-bottom: 10px;
+}
+.section-privacy__item:last-child {
+  margin-bottom: 0;
+}
+.section-privacy p {
+  font-family: "Inter";
+  font-size: 16px;
+  line-height: 145%;
+  color: #2D2D2D;
+}
+@media (max-width: 575px) {
+  .section-privacy p {
+    font-size: 14px;
+  }
+}
+.section-privacy__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.close {
+  display: block;
+  padding-top: 10px;
+  width: 30px;
+  height: 30px;
+  z-index: 100;
+}
+.close:hover {
+  opacity: 0.8;
+  cursor: pointer;
+  transform: scale(1.025);
+}
+.close span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #2D2D2D;
+}
+.close span:first-child {
+  transform: translateY(3px) rotate(-45deg);
+}
+.close span:last-child {
+  transform: rotate(45deg);
+}
+
+.personal-data {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: auto;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.personal-data__content {
+  position: relative;
+  margin: 25px auto;
+  padding: 24px;
+  width: 780px;
+  max-width: 94%;
+  background-color: white;
+}
+.personal-data__title {
+  margin-bottom: 20px;
+}
+@media (max-width: 575px) {
+  .personal-data__title {
+    font-size: 18px;
+    max-width: 250px;
+  }
+}
+.personal-data__heading {
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 700;
+  color: #2D2D2D;
+}
+@media (max-width: 575px) {
+  .personal-data__heading {
+    font-size: 18px;
+  }
+}
+.personal-data__list {
+  margin-bottom: 20px;
+}
+.personal-data__item {
+  margin-bottom: 10px;
+}
+.personal-data__item:last-child {
+  margin-bottom: 0;
+}
+.personal-data p {
+  font-family: "Inter";
+  font-size: 16px;
+  line-height: 145%;
+  color: #2D2D2D;
+}
+@media (max-width: 575px) {
+  .personal-data p {
+    font-size: 14px;
+  }
+}
+.personal-data__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.form-modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  padding: 100px 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: auto;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.form-modal__content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  min-height: 300px;
+}
+@media (max-width: 767px) {
+  .form-modal__content {
+    max-width: 400px;
+  }
+}
+@media (max-width: 575px) {
+  .form-modal__content {
+    max-width: 300px;
+  }
+}
+.form-modal__title {
+  margin-bottom: 20px;
+  max-width: 600px;
+  font-size: 28px;
+  text-align: center;
+  color: white;
+}
+@media (max-width: 767px) {
+  .form-modal__title {
+    font-size: 24px;
+  }
+}
+@media (max-width: 575px) {
+  .form-modal__title {
+    font-size: 18px;
+  }
+}
+.form-modal__close {
+  position: absolute;
+  top: -25px;
+  right: 0px;
+}
+.form-modal__close span {
+  background-color: white;
 }/*# sourceMappingURL=style.css.map */
