--- a/web-studio/scss/style.sass
+++ b/web-studio/scss/style.sass
@@ -1314,3 +1314,168 @@ $color_dark: #2D2D2D
       font-size: 30px
     @media (max-width: 575px)
       font-size: 28px
+
+// hidden
+
+.section-privacy
+  position: fixed
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0,0,0,0.9)
+  overflow: auto
+  z-index: 1000
+  opacity: 0
+  visibility: hidden
+  transition: all 0.3s ease-in-out
+  &__content
+    position: relative
+    margin: 25px auto
+    padding: 24px
+    width: 780px
+    max-width: 94%
+    background-color: white
+  &__title
+    margin-bottom: 20px
+    @media (max-width: 575px)
+      font-size: 18px
+  &__heading
+    margin-bottom: 10px
+    font-size: 20px
+    line-height: 130%
+    font-weight: 700
+    color: $color_dark
+    @media (max-width: 575px)
+      font-size: 18px
+  &__list
+    margin-bottom: 20px
+  &__item
+    margin-bottom: 10px
+    &:last-child
+      margin-bottom: 0
+  p
+    font-family: 'Inter'
+    font-size: 16px
+    line-height: 145%
+    color: $color_dark
+    @media (max-width: 575px)
+      font-size: 14px
+  &__close
+    position: absolute
+    top: 20px
+    right: 20px
+
+.close
+  display: block
+  padding-top: 10px
+  width: 30px
+  height: 30px
+  z-index: 100
+  &:hover
+    opacity: 0.8
+    cursor: pointer
+    transform: scale(1.025)
+  span
+    display: block
+    width: 100%
+    height: 3px
+    background-color: $color_dark
+    &:first-child
+      transform: translateY(3px) rotate(-45deg)
+    &:last-child
+      transform: rotate(45deg)
+
+.personal-data
+  position: fixed
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0,0,0,0.9)
+  overflow: auto
+  z-index: 1000
+  opacity: 0
+  visibility: hidden
+  transition: all 0.3s ease-in-out
+  &__content
+    position: relative
+    margin: 25px auto
+    padding: 24px
+    width: 780px
+    max-width: 94%
+    background-color: white
+  &__title
+    margin-bottom: 20px
+    @media (max-width: 575px)
+      font-size: 18px
+      max-width: 250px
+  &__heading
+    margin-bottom: 10px
+    font-size: 20px
+    line-height: 130%
+    font-weight: 700
+    color: $color_dark
+    @media (max-width: 575px)
+      font-size: 18px
+  &__list
+    margin-bottom: 20px
+  &__item
+    margin-bottom: 10px
+    &:last-child
+      margin-bottom: 0
+  p
+    font-family: 'Inter'
+    font-size: 16px
+    line-height: 145%
+    color: $color_dark
+    @media (max-width: 575px)
+      font-size: 14px
+  &__close
+    position: absolute
+    top: 20px
+    right: 20px
+
+.form-modal
+  position: fixed
+  left: 0
+  top: 0
+  display: flex
+  justify-content: center
+  padding: 100px 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0,0,0,0.9)
+  overflow: auto
+  z-index: 1000
+  opacity: 0
+  visibility: hidden
+  transition: all 0.3s ease-in-out
+
+  &__content
+    position: relative
+    display: flex
+    flex-direction: column
+    align-items: center
+    max-width: 600px
+    min-height: 300px
+    @media (max-width: 767px)
+      max-width: 400px
+    @media (max-width: 575px)
+      max-width: 300px
+  &__title
+    margin-bottom: 20px
+    max-width: 600px
+    font-size: 28px
+    text-align: center
+    color: white
+    @media (max-width: 767px)
+      font-size: 24px
+    @media (max-width: 575px)
+      font-size: 18px
+  &__close
+    position: absolute
+    top: -25px
+    right: 0px
+    span
+      background-color: white
